fixed overflowing text

--- a/src/App.css
+++ b/src/App.css
@@ -842,7 +842,7 @@ h3,
 }
 
 .slider-endimage {
-  height: 80vh;
+  height: 50rem;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url('./Images/aurelien-lemasson-theobald-x00CzBt4Dfk-unsplash.jpg')
       no-repeat center center;
@@ -855,7 +855,7 @@ h3,
   display: inline-block;
   width: 60%;
   position: absolute;
-  font-size: 4rem;
+  font-size: 5.4rem;
   top: 20%;
   left: 7%;
   border: none;
@@ -1035,6 +1035,10 @@ small {
     width: 70%;
   }
 
+  .slider-endimage h2 {
+    font-size: 4rem;
+  }
+
   .who,
   .values {
     padding: 8rem 12rem;
@@ -1112,10 +1116,6 @@ small {
 
   .restaurant-list-container {
     margin: 6rem 0.5rem;
-  }
-
-  .slider-endimage {
-    height: 45vh;
   }
 
   .newsletter {
